--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <link rel="apple-touch-icon" href="images/icon.png">
   <link rel="icon" type="image/png" href="images/icon.png">
   <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" id="app-theme" href="app/styles/default.css">
-  <link rel="stylesheet" type="text/css" id="app-style" href="app/styles/scaled.css">
-  <link rel="stylesheet" type="text/css" href="app/styles/shared.css">
-  <link rel="stylesheet" type="text/css" href="app/styles/pluginscomps.css">
+  <link rel="stylesheet" type="text/css" id="app-theme" href="styles/default.css">
+  <link rel="stylesheet" type="text/css" id="app-style" href="styles/scaled.css">
+  <link rel="stylesheet" type="text/css" href="styles/shared.css">
+  <link rel="stylesheet" type="text/css" href="styles/pluginscomps.css">
  </head>
  <body>
   <div id="app">
@@ -67,10 +67,10 @@
    <dab-toast ref="DabToast"></dab-toast>
    <div id="dab-sidebar-overlay"></div>
   </div>
-  <script src="app/scripts/builder.debug.min.js"></script>
-  <script src="app/scripts/pluginscomps.js"></script>
-  <script src="app/scripts/applangs.js"></script>
-  <script src="app/scripts/app.js"></script>
+  <script src="scripts/builder.debug.min.js"></script>
+  <script src="scripts/pluginscomps.js"></script>
+  <script src="scripts/applangs.js"></script>
+  <script src="scripts/app.js"></script>
   <script src="cordova.js"></script>
  </body>
 </html>
